--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="shortcut icon" href="./images/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
@@ -24,16 +25,17 @@
     <title>Sultan Badri</title>
   </head>
   <body>
+    <!-- HEADER -->
     <header id="home">
       <nav>
         <div class="logo">
           <h3>Sultan Badri</h3>
         </div>
         <ul class="links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#home" class="link">Home</a></li>
+          <li><a href="#about" class="link">About</a></li>
+          <li><a href="#projects" class="link">Projects</a></li>
+          <!-- <li><a href="#contact" class="link">Contact</a></li> -->
         </ul>
         <div class="hamburger-menu">
           <div class="line1"></div>
@@ -41,20 +43,8 @@
           <div class="line3"></div>
         </div>
       </nav>
-      <div class="background">
-        <ul class="squares">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
+
+      <!-- HERO SECTION -->
       <div class="hero">
         <h1 class="h1">Hi, I'm a <span>student</span></h1>
         <p class="student">
@@ -65,6 +55,8 @@
           <a href="#projects" class="projects-btn">Projects</a>
         </div>
       </div>
+
+      <!-- SOCIAL LINKS -->
       <div class="socials" id="socials">
         <ul>
           <li>
@@ -100,6 +92,7 @@
       </div>
     </header>
 
+    <!-- ABOUT ME -->
     <section id="about">
       <div class="container-about">
         <div class="about-me">
@@ -121,6 +114,7 @@
       </div>
     </section>
 
+    <!-- PROJECT SHOWCASE -->
     <section id="projects">
       <div class="showcase">
         <h2 id="title">Projects</h2>
@@ -129,6 +123,56 @@
       <div class="container">
         <div class="card" id="card">
           <div class="card-img card1"></div>
+          <div class="card-text">
+            <h2>Weather App</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Explicabo, est.
+            </p>
+          </div>
+          <div class="card-buttons">
+            <a
+              href="https://sultanbadri.github.io/weather-app/"
+              target="_blank"
+              class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/weather-app"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
+        <div class="card" id="card">
+          <div class="card-img card2"></div>
+          <div class="card-text">
+            <h2>Portfolio V. 1</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Explicabo, est.
+            </p>
+          </div>
+          <div class="card-buttons">
+            <a
+              href="https://github.com/SultanBadri/portfolio"
+              target="_blank"
+              class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/portfolio"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
+        <div class="card" id="card">
+          <div class="card-img card3"></div>
           <div class="card-text">
             <h2>Todo List</h2>
             <p>
@@ -153,7 +197,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card1"></div>
+          <div class="card-img card4"></div>
           <div class="card-text">
             <h2>Tic Tac Toe</h2>
             <p>
@@ -178,7 +222,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card2"></div>
+          <div class="card-img card5"></div>
           <div class="card-text">
             <h2>Restaurant Page</h2>
             <p>
@@ -203,7 +247,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card3"></div>
+          <div class="card-img card6"></div>
           <div class="card-text">
             <h2>Virtual Library</h2>
             <p>
@@ -213,13 +257,13 @@
           </div>
           <div class="card-buttons">
             <a
-              href="https://sultanbadri.github.io/library/"
+              href="https://sultanbadri.github.io/virtual-library/"
               target="_blank"
               class="demo"
               ><i class="far fa-eye"></i> Demo</a
             >
             <a
-              href="https://github.com/SultanBadri/library"
+              href="https://github.com/SultanBadri/virtual-library"
               target="_blank"
               class="code"
               ><i class="fas fa-code"></i> Code</a
