added skills section, design changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       data-auto-a11y="true"
     ></script>
     <script defer src="https://friconix.com/cdn/friconix.js"></script>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <title>Sultan Badri</title>
   </head>
   <body>
@@ -98,15 +99,9 @@
         <div class="about-me">
           <h2>About me</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
-            suscipit, eligendi veniam quibusdam quasi voluptatum officia
-            incidunt magnam quisquam iusto ullam, at voluptates ad debitis
-            distinctio similique corrupti vel. Ullam commodi soluta repellendus
-            animi ducimus omnis, nemo, neque molestiae pariatur quasi quae
-            recusandae. Molestiae consectetur excepturi perspiciatis explicabo
-            aut doloremque.
+            I'm currently an undergraduate looking to improve my knowledge in
+            web development.
           </p>
-          <!-- <div class="card">hi</div> -->
         </div>
         <div class="student-img">
           <img src="./images/hello.svg" alt="" />
@@ -114,21 +109,131 @@
       </div>
     </section>
 
-    <!-- PROJECT SHOWCASE -->
-    <section id="projects">
-      <div class="showcase">
-        <h2 id="title">Projects</h2>
+    <!-- SKILLS -->
+    <section id="skills">
+      <div class="header">
+        <h2>My skills</h2>
       </div>
 
       <div class="container">
+        <div class="languages">
+          <p><i class="fas fa-code"></i></p>
+          <h3>Languages</h3>
+          <span
+            >HTML
+            <span
+              class="iconify"
+              data-icon="logos:html-5"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
+            >CSS
+            <span
+              class="iconify"
+              data-icon="logos:css-3"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
+            >SCSS
+            <span
+              class="iconify"
+              data-icon="logos:sass"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
+            >JavaScript
+            <span
+              class="iconify"
+              data-icon="logos:javascript"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
+            >TypeScript
+            <span
+              class="iconify"
+              data-icon="logos-typescript-icon"
+              data-inline="false"
+            ></span
+          ></span>
+        </div>
+
+        <div class="technologies">
+          <p><i class="fas fa-tools"></i></p>
+          <h3>Technologies</h3>
+          <span
+            >Git
+            <span
+              class="iconify"
+              data-icon="logos:git-icon"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
+            >GitHub
+            <span
+              class="iconify"
+              data-icon="logos:github-octocat"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
+            >Visual Studio Code
+            <span
+              class="iconify"
+              data-icon="logos:visual-studio-code"
+              data-inline="false"
+            ></span
+          ></span>
+        </div>
+
+        <div class="learning">
+          <p><i class="fas fa-book-reader"></i></p>
+          <h3>What I'm learning</h3>
+          <span
+            >React
+            <span
+              class="iconify"
+              data-icon="logos:react"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
+            >Python
+            <span
+              class="iconify"
+              data-icon="logos:python"
+              data-inline="false"
+            ></span
+          ></span>
+        </div>
+      </div>
+    </section>
+
+    <!-- PROJECT SHOWCASE -->
+    <section id="projects">
+      <div class="header">
+        <h2>Projects</h2>
+      </div>
+
+      <div class="container reveal">
         <div class="card" id="card">
           <div class="card-img card1"></div>
           <div class="card-text">
             <h2>Weather App</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo, est.
-            </p>
+            <p>Weather application made using the OpenWeatherMap API.</p>
+            <br />
+            <p>November 2020</p>
           </div>
           <div class="card-buttons">
             <a
@@ -150,10 +255,9 @@
           <div class="card-img card2"></div>
           <div class="card-text">
             <h2>Portfolio V. 1</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo, est.
-            </p>
+            <p>First attempt at making a web development portfolio.</p>
+            <br />
+            <p>November 2020</p>
           </div>
           <div class="card-buttons">
             <a
@@ -175,10 +279,9 @@
           <div class="card-img card3"></div>
           <div class="card-text">
             <h2>Todo List</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo, est.
-            </p>
+            <p>A todo list using using vanilla JavaScript.</p>
+            <br />
+            <p>November 2020</p>
           </div>
           <div class="card-buttons">
             <a
@@ -200,10 +303,9 @@
           <div class="card-img card4"></div>
           <div class="card-text">
             <h2>Tic Tac Toe</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo, est.
-            </p>
+            <p>Tic Tac Toe with single player and two player modes.</p>
+            <br />
+            <p>October 2020</p>
           </div>
           <div class="card-buttons">
             <a
@@ -225,10 +327,9 @@
           <div class="card-img card5"></div>
           <div class="card-text">
             <h2>Restaurant Page</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo, est.
-            </p>
+            <p>A Dynamically rendered restaurant page made with JavaScript.</p>
+            <br />
+            <p>October 2020</p>
           </div>
           <div class="card-buttons">
             <a
@@ -251,9 +352,11 @@
           <div class="card-text">
             <h2>Virtual Library</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Explicabo, est.
+              Virtual library for storing books on the browser with
+              localStorage.
             </p>
+            <br />
+            <p>October 2020</p>
           </div>
           <div class="card-buttons">
             <a
