--- a/index.html
+++ b/index.html
@@ -8,36 +8,43 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="./images/favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script
       src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
       data-auto-a11y="true"
     ></script>
     <script defer src="https://friconix.com/cdn/friconix.js"></script>
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <script src="script.js" defer></script>
     <title>Sultan Badri</title>
   </head>
   <body>
+    <!-- BACK TO TOP BUTTON -->
+    <button id="back-to-top"><i class="fas fa-arrow-up"></i></button>
+
     <!-- HEADER -->
     <header id="home">
       <nav>
         <div class="logo">
-          <h3>Sultan Badri</h3>
+          <h3>Sultan <span>Badri</span></h3>
         </div>
+
         <ul class="links">
           <li><a href="#home" class="link">Home</a></li>
           <li><a href="#about" class="link">About</a></li>
+          <li><a href="#skills" class="link">Skills</a></li>
           <li><a href="#projects" class="link">Projects</a></li>
-          <!-- <li><a href="#contact" class="link">Contact</a></li> -->
+
+          <!-- DARK MODE TOGGLE -->
+          <div class="color-toggle-container">
+            <input type="checkbox" id="color-toggle-input" />
+            <label for="color-toggle-input" class="color-toggle-label">
+              <div class="color-toggle"></div>
+            </label>
+          </div>
         </ul>
+
         <div class="hamburger-menu">
           <div class="line1"></div>
           <div class="line2"></div>
@@ -47,7 +54,7 @@
 
       <!-- HERO SECTION -->
       <div class="hero">
-        <h1 class="h1">Hi, I'm a <span>student</span></h1>
+        <h1 class="h1">Hi, I'm a <span class="animate"></span></h1>
         <p class="student">
           Full-time undergraduate with passion for learning web development.
         </p>
@@ -100,11 +107,16 @@
           <h2>About me</h2>
           <p>
             I'm currently an undergraduate looking to improve my knowledge in
-            web development.
+            web development. Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Sapiente illo dolor quaerat quidem nemo maxime, suscipit ex
+            sit distinctio nisi nulla sint delectus, accusamus repellat autem
+            aut ipsa accusantium consequatur ipsum, totam nesciunt? Assumenda
+            enim ex vitae beatae impedit, sapiente quisquam unde distinctio.
+            Minima, ad aspernatur nobis distinctio nisi animi?
           </p>
         </div>
         <div class="student-img">
-          <img src="./images/hello.svg" alt="" />
+          <img src="./images/hello.svg" alt="hello" />
         </div>
       </div>
     </section>
@@ -327,7 +339,7 @@
           <div class="card-img card5"></div>
           <div class="card-text">
             <h2>Restaurant Page</h2>
-            <p>A Dynamically rendered restaurant page made with JavaScript.</p>
+            <p>Dynamically rendered restaurant page with JavaScript.</p>
             <br />
             <p>October 2020</p>
           </div>
@@ -351,10 +363,7 @@
           <div class="card-img card6"></div>
           <div class="card-text">
             <h2>Virtual Library</h2>
-            <p>
-              Virtual library for storing books on the browser with
-              localStorage.
-            </p>
+            <p>Library for storing books on the browser using localStorage.</p>
             <br />
             <p>October 2020</p>
           </div>
@@ -382,7 +391,5 @@
         >sultanbadri@berkeley.edu</a
       >
     </footer>
-
-    <script src="script.js"></script>
   </body>
 </html>
