updated portfolio demo link, changed portfolio image on card

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </div>
           <div class="card-buttons">
             <a
-              href="https://github.com/SultanBadri/portfolio"
+              href="https://sultanbadri.github.io/portfolio/"
               target="_blank"
               class="demo"
               ><i class="far fa-eye"></i> Demo</a
