updated about me section, added more strings to type effect

--- a/index.html
+++ b/index.html
@@ -95,11 +95,6 @@
               >Email<i class="fi-xwsuxl-envelope-solid"></i
             ></a>
           </li>
-          <li>
-            <a href="#" target="_blank" class="resume"
-              >Resume<i class="fi-snsuxl-user-tie-circle"></i
-            ></a>
-          </li>
         </ul>
       </div>
     </header>
@@ -111,12 +106,12 @@
           <h2>About Me</h2>
           <p>
             I'm currently an undergraduate looking to improve my knowledge in
-            web development. I'm a student at UC Berkeley, and I intend to major
-            in computer science. My programming journey kickstarted when I
-            learned to make a simple HTML website on Microsoft's notepad
-            program. The Odin Project's Full Stack JavaScript Curriculum is just
-            one of the ways I'm learning to code now. Outside of coding, I like
-            to play board games, video games, and learn Spanish.
+            software and web development. I attend UC Berkeley and will major in
+            computer science. My programming journey kickstarted when learning
+            to make a simple HTML website on Microsoft's notepad program. The
+            Odin Project's Full Stack JavaScript Curriculum is just one of the
+            ways I'm learning to code now. Outside of coding, I like to play
+            board and video games, watch MMA, and continuing to learn Spanish.
           </p>
         </div>
         <div class="student-img">
