--- a/index.html
+++ b/index.html
@@ -241,6 +241,30 @@
         <div class="card" id="card">
           <div class="card-img card1"></div>
           <div class="card-text">
+            <h2>CV Application</h2>
+            <p>CV/resume built using React and TypeScript.</p>
+            <br />
+            <p>December 2020</p>
+          </div>
+          <div class="card-buttons">
+            <a
+              href="https://sultanbadri.github.io/cv-project/"
+              target="_blank"
+              class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/cv-project"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
+        <div class="card" id="card">
+          <div class="card-img card2"></div>
+          <div class="card-text">
             <h2>Weather App</h2>
             <p>Weather application made using the OpenWeatherMap API.</p>
             <br />
@@ -263,7 +287,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card2"></div>
+          <div class="card-img card3"></div>
           <div class="card-text">
             <h2>Portfolio V. 1</h2>
             <p>First attempt at making a web development portfolio.</p>
@@ -287,7 +311,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card3"></div>
+          <div class="card-img card4"></div>
           <div class="card-text">
             <h2>Todo List</h2>
             <p>A todo list using using vanilla JavaScript.</p>
@@ -311,7 +335,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card4"></div>
+          <div class="card-img card5"></div>
           <div class="card-text">
             <h2>Tic Tac Toe</h2>
             <p>Tic Tac Toe with single player and two player modes.</p>
@@ -335,7 +359,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card5"></div>
+          <div class="card-img card6"></div>
           <div class="card-text">
             <h2>Restaurant Page</h2>
             <p>Dynamically rendered restaurant page with JavaScript.</p>
@@ -359,7 +383,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card6"></div>
+          <div class="card-img card7"></div>
           <div class="card-text">
             <h2>Virtual Library</h2>
             <p>Library for storing books on the browser using localStorage.</p>
