--- a/index.html
+++ b/index.html
@@ -263,6 +263,30 @@
         <div class="card" id="card">
           <div class="card-img card1"></div>
           <div class="card-text">
+            <h2>Memory Cards</h2>
+            <p>React memory card game with tf2 theme.</p>
+            <br />
+            <p>January 2021</p>
+          </div>
+          <div class="card-buttons">
+            <a
+              href="https://sultanbadri.github.io/memory-cards/"
+              target="_blank"
+              class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/memory-cards"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
+        <div class="card" id="card">
+          <div class="card-img card2"></div>
+          <div class="card-text">
             <h2>CV Application</h2>
             <p>CV/resume built using React and TypeScript.</p>
             <br />
@@ -285,7 +309,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card2"></div>
+          <div class="card-img card3"></div>
           <div class="card-text">
             <h2>Weather App</h2>
             <p>Weather application made using the OpenWeatherMap API.</p>
@@ -309,7 +333,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card3"></div>
+          <div class="card-img card4"></div>
           <div class="card-text">
             <h2>Portfolio V. 1</h2>
             <p>First attempt at making a web development portfolio.</p>
@@ -333,7 +357,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card4"></div>
+          <div class="card-img card5"></div>
           <div class="card-text">
             <h2>Todo List</h2>
             <p>A todo list using using vanilla JavaScript.</p>
@@ -342,13 +366,13 @@
           </div>
           <div class="card-buttons">
             <a
-              href="https://github.com/SultanBadri/todo-list"
+              href="https://sultanbadri.github.io/todo-list/"
               target="_blank"
               class="demo"
               ><i class="far fa-eye"></i> Demo</a
             >
             <a
-              href="https://sultanbadri.github.io/todo-list/"
+              href="https://github.com/SultanBadri/todo-list"
               target="_blank"
               class="code"
               ><i class="fas fa-code"></i> Code</a
@@ -357,7 +381,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card5"></div>
+          <div class="card-img card6"></div>
           <div class="card-text">
             <h2>Tic Tac Toe</h2>
             <p>Tic Tac Toe with single player and two player modes.</p>
@@ -381,7 +405,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card6"></div>
+          <div class="card-img card7"></div>
           <div class="card-text">
             <h2>Restaurant Page</h2>
             <p>Dynamically rendered restaurant page with JavaScript.</p>
@@ -405,7 +429,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card7"></div>
+          <div class="card-img card8"></div>
           <div class="card-text">
             <h2>Virtual Library</h2>
             <p>Library for storing books on the browser using localStorage.</p>
