optimized images so loading is faster

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="./images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script
+      defer
       src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
       data-auto-a11y="true"
     ></script>
     <script defer src="https://friconix.com/cdn/friconix.js"></script>
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-    <script src="script.js" defer></script>
+    <script
+      defer
+      src="https://code.iconify.design/1/1.0.7/iconify.min.js"
+    ></script>
+    <script defer src="script.js"></script>
     <title>Sultan Badri | Portfolio</title>
   </head>
   <body>
@@ -127,7 +131,12 @@
           </p>
         </div>
         <div class="student-img">
-          <img src="./images/hello.svg" alt="hello" />
+          <img
+            src="./images/hello.svg"
+            height="250px"
+            width="350px"
+            alt="hello"
+          />
         </div>
       </div>
     </section>
