--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="./images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script
+      defer
       src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
       data-auto-a11y="true"
     ></script>
