added languages for each project card, enhanced media queries

--- a/index.html
+++ b/index.html
@@ -161,16 +161,12 @@
           ></span>
           <br />
           <span
-            >CSS
+            >CSS/SCSS
             <span
               class="iconify"
               data-icon="logos:css-3"
               data-inline="false"
-            ></span
-          ></span>
-          <br />
-          <span
-            >SCSS
+            ></span>
             <span
               class="iconify"
               data-icon="logos:sass"
@@ -179,19 +175,24 @@
           ></span>
           <br />
           <span
-            >JavaScript
+            >JS/TS
             <span
               class="iconify"
               data-icon="logos:javascript"
+              data-inline="false"
+            ></span>
+            <span
+              class="iconify"
+              data-icon="logos-typescript-icon"
               data-inline="false"
             ></span
           ></span>
           <br />
           <span
-            >TypeScript
+            >React
             <span
               class="iconify"
-              data-icon="logos-typescript-icon"
+              data-icon="logos:react"
               data-inline="false"
             ></span
           ></span>
@@ -218,11 +219,11 @@
             ></span
           ></span>
           <br />
-          <span
-            >Figma
+          <span>
+            Webpack
             <span
               class="iconify"
-              data-icon="grommet-icons:figma"
+              data-icon="logos:webpack"
               data-inline="false"
             ></span
           ></span>
@@ -236,20 +237,20 @@
               data-inline="false"
             ></span
           ></span>
+          <br />
+          <span
+            >Figma
+            <span
+              class="iconify"
+              data-icon="grommet-icons:figma"
+              data-inline="false"
+            ></span
+          ></span>
         </div>
 
         <div class="learning">
           <p><i class="fas fa-book-reader"></i></p>
           <h3>What I'm learning</h3>
-          <span
-            >React
-            <span
-              class="iconify"
-              data-icon="logos:react"
-              data-inline="false"
-            ></span
-          ></span>
-          <br />
           <span
             >Python
             <span
@@ -275,6 +276,20 @@
             <h2>Memory Cards</h2>
             <p>React memory card game with tf2 theme.</p>
             <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos-typescript-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:react"
+                data-inline="false"
+              ></span>
+            </p>
+            <br />
             <p>January 2021</p>
           </div>
           <div class="card-buttons">
@@ -298,6 +313,20 @@
           <div class="card-text">
             <h2>CV Application</h2>
             <p>CV/resume built using React and TypeScript.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos-typescript-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:react"
+                data-inline="false"
+              ></span>
+            </p>
             <br />
             <p>December 2020</p>
           </div>
@@ -323,6 +352,30 @@
             <h2>Weather App</h2>
             <p>Weather application made using the OpenWeatherMap API.</p>
             <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:html-5"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:css-3"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos-typescript-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:webpack"
+                data-inline="false"
+              ></span>
+            </p>
+            <br />
             <p>November 2020</p>
           </div>
           <div class="card-buttons">
@@ -346,6 +399,25 @@
           <div class="card-text">
             <h2>Portfolio V. 1</h2>
             <p>First attempt at making a web development portfolio.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:html-5"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:sass"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:javascript"
+                data-inline="false"
+              ></span>
+            </p>
             <br />
             <p>November 2020</p>
           </div>
@@ -371,6 +443,30 @@
             <h2>Todo List</h2>
             <p>A todo list using using vanilla JavaScript.</p>
             <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:html-5"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:css-3"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:javascript"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:webpack"
+                data-inline="false"
+              ></span>
+            </p>
+            <br />
             <p>November 2020</p>
           </div>
           <div class="card-buttons">
@@ -394,6 +490,25 @@
           <div class="card-text">
             <h2>Tic Tac Toe</h2>
             <p>Tic Tac Toe with single player and two player modes.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:html-5"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:css-3"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:javascript"
+                data-inline="false"
+              ></span>
+            </p>
             <br />
             <p>October 2020</p>
           </div>
@@ -419,6 +534,30 @@
             <h2>Restaurant Page</h2>
             <p>Dynamically rendered restaurant page with JavaScript.</p>
             <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:html-5"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:css-3"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:javascript"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:webpack"
+                data-inline="false"
+              ></span>
+            </p>
+            <br />
             <p>October 2020</p>
           </div>
           <div class="card-buttons">
@@ -442,6 +581,25 @@
           <div class="card-text">
             <h2>Virtual Library</h2>
             <p>Library for storing books on the browser using localStorage.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:html-5"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:css-3"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:javascript"
+                data-inline="false"
+              ></span>
+            </p>
             <br />
             <p>October 2020</p>
           </div>
