updated skills section

--- a/index.html
+++ b/index.html
@@ -189,6 +189,20 @@
           ></span>
           <br />
           <span
+            >Python
+            <span
+              class="iconify"
+              data-icon="logos:python"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+        </div>
+
+        <div class="learning">
+          <p><i class="fas fa-book-reader"></i></p>
+          <h3>Frameworks/Libraries</h3>
+          <span
             >React
             <span
               class="iconify"
@@ -210,15 +224,6 @@
             ></span
           ></span>
           <br />
-          <span
-            >GitHub
-            <span
-              class="iconify"
-              data-icon="logos:github-octocat"
-              data-inline="false"
-            ></span
-          ></span>
-          <br />
           <span>
             Webpack
             <span
@@ -228,7 +233,6 @@
             ></span
           ></span>
           <br />
-
           <span
             >VS Code
             <span
@@ -243,19 +247,6 @@
             <span
               class="iconify"
               data-icon="grommet-icons:figma"
-              data-inline="false"
-            ></span
-          ></span>
-        </div>
-
-        <div class="learning">
-          <p><i class="fas fa-book-reader"></i></p>
-          <h3>What I'm learning</h3>
-          <span
-            >Python
-            <span
-              class="iconify"
-              data-icon="logos:python"
               data-inline="false"
             ></span
           ></span>
