added shopping cart project to portfolio

--- a/index.html
+++ b/index.html
@@ -264,6 +264,49 @@
         <div class="card" id="card">
           <div class="card-img card1"></div>
           <div class="card-text">
+            <h2>Shopping cart</h2>
+            <p>React shopping-cart made using React Router.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos-typescript-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:react"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:react-router"
+                data-inline="false"
+              ></span>
+            </p>
+            <br />
+            <p>January 2020</p>
+          </div>
+          <div class="card-buttons">
+            <a
+              href="https://sultanbadri.github.io/shopping-cart/#/"
+              target="_blank"
+              class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/shopping-cart"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
+        <div class="card" id="card">
+          <div class="card-img card2"></div>
+          <div class="card-text">
             <h2>Memory Cards</h2>
             <p>React memory card game with tf2 theme.</p>
             <br />
@@ -300,7 +343,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card2"></div>
+          <div class="card-img card3"></div>
           <div class="card-text">
             <h2>CV Application</h2>
             <p>CV/resume built using React and TypeScript.</p>
@@ -338,7 +381,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card3"></div>
+          <div class="card-img card4"></div>
           <div class="card-text">
             <h2>Weather App</h2>
             <p>Weather application made using the OpenWeatherMap API.</p>
@@ -386,7 +429,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card4"></div>
+          <div class="card-img card5"></div>
           <div class="card-text">
             <h2>Portfolio V. 1</h2>
             <p>First attempt at making a web development portfolio.</p>
@@ -429,7 +472,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card5"></div>
+          <div class="card-img card6"></div>
           <div class="card-text">
             <h2>Todo List</h2>
             <p>A todo list using using vanilla JavaScript.</p>
@@ -477,7 +520,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card6"></div>
+          <div class="card-img card7"></div>
           <div class="card-text">
             <h2>Tic Tac Toe</h2>
             <p>Tic Tac Toe with single player and two player modes.</p>
@@ -520,7 +563,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card7"></div>
+          <div class="card-img card8"></div>
           <div class="card-text">
             <h2>Restaurant Page</h2>
             <p>Dynamically rendered restaurant page with JavaScript.</p>
@@ -568,7 +611,7 @@
         </div>
 
         <div class="card" id="card">
-          <div class="card-img card8"></div>
+          <div class="card-img card9"></div>
           <div class="card-text">
             <h2>Virtual Library</h2>
             <p>Library for storing books on the browser using localStorage.</p>
