removed vs code icon, added jquery icon in skills

--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
           <p><i class="fas fa-book-reader"></i></p>
           <h3>Frameworks/Libraries</h3>
           <span
+            >jQuery
+            <span
+              class="iconify"
+              data-icon="bx:bxl-jquery"
+              data-inline="false"
+            ></span>
+          </span>
+          <br />
+          <span
             >React
             <span
               class="iconify"
@@ -229,15 +238,6 @@
             <span
               class="iconify"
               data-icon="logos:webpack"
-              data-inline="false"
-            ></span
-          ></span>
-          <br />
-          <span
-            >VS Code
-            <span
-              class="iconify"
-              data-icon="logos:visual-studio-code"
               data-inline="false"
             ></span
           ></span>
