--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <meta property="og:type" content="website" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <script defer src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script defer src="script.js"></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
@@ -42,8 +43,7 @@
       defer
       src="https://code.iconify.design/1/1.0.7/iconify.min.js"
     ></script>
-    <script defer src="script.js"></script>
-    <title>Sultan Badri</title>
+    <title>Sultan Badri | Portfolio</title>
   </head>
   <body>
     <!-- BACK TO TOP BUTTON -->
