changed some project descriptions

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           <div class="card-img card4"></div>
           <div class="card-text">
             <h2>Weather App</h2>
-            <p>Weather application made using the OpenWeatherMap API.</p>
+            <p>Weather app made using the OpenWeatherMap API.</p>
             <br />
             <p class="made-with">
               Made with:
@@ -603,7 +603,7 @@
           <div class="card-img card8"></div>
           <div class="card-text">
             <h2>Restaurant Page</h2>
-            <p>Dynamically rendered restaurant page with JavaScript.</p>
+            <p>Dynamically rendered restaurant page with JS.</p>
             <br />
             <p class="made-with">
               Made with:
@@ -651,7 +651,7 @@
           <div class="card-img card9"></div>
           <div class="card-text">
             <h2>Virtual Library</h2>
-            <p>Library for storing books on the browser using localStorage.</p>
+            <p>Library to store books on the browser with localStorage.</p>
             <br />
             <p class="made-with">
               Made with:
