--- a/index.html
+++ b/index.html
@@ -256,6 +256,15 @@
               data-inline="false"
             ></span
           ></span>
+          <br />
+          <span
+            >Firebase
+            <span
+              class="iconify"
+              data-icon="logos:firebase"
+              data-inline="false"
+            ></span
+          ></span>
         </div>
 
         <div class="technologies">
