added mini message board project

--- a/index.html
+++ b/index.html
@@ -240,6 +240,20 @@
           ></span>
           <br />
           <span
+            >Node.js/Express.js
+            <span
+              class="iconify"
+              data-icon="logos:nodejs-icon"
+              data-inline="false"
+            ></span>
+            <span
+              class="iconify"
+              data-icon="simple-icons:express"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
             >jQuery
             <span
               class="iconify"
@@ -253,15 +267,6 @@
             <span
               class="iconify"
               data-icon="logos:jest"
-              data-inline="false"
-            ></span
-          ></span>
-          <br />
-          <span
-            >Firebase
-            <span
-              class="iconify"
-              data-icon="logos:firebase"
               data-inline="false"
             ></span
           ></span>
@@ -307,6 +312,44 @@
       </div>
 
       <div class="container reveal">
+        <div class="card" id="card">
+          <div class="card-img card10"></div>
+          <div class="card-text">
+            <h2>Mini Message Board</h2>
+            <p>Message board made with node and express.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:nodejs-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="simple-icons:express"
+                data-inline="false"
+              ></span>
+            </p>
+            <br />
+            <p>March 2021</p>
+          </div>
+          <div class="card-buttons">
+            <a
+              href="https://powerful-bayou-68462.herokuapp.com/"
+              target="_blank"
+              class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/mini-message-board"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
         <div class="card" id="card">
           <div class="card-img card1"></div>
           <div class="card-text">
